# vid-lens

./: .gitignore  DESIGN_UPDATES.md  README.md  config.yaml  docker-compose.yml  go.mod  go.sum
.github/workflows/: deploy-book.yml  deploy-server.yml
.logs/: server.err
book/: package-lock.json  package.json
book/.vitepress/: config.mts
book/docs/: index.md
cmd/mysql-to-postgres/: README.md  main.go  main_test.go  options.go  options_test.go
cmd/rag-audit/: config_validation_test.go  main.go  main_test.go
cmd/rag-eval/: README.md  answer_eval.go  artifact_snapshot.go  artifact_snapshot_test.go  config_validation_test.go  main.go  (+10 more)
deploy/: server-deploy.sh  server-deploy_test.sh  server-preflight-audit.sh  server-preflight-audit_test.sh
docs/: README.md  asr-chunking-and-recovery-interview-defense.md  backend-maintenance-map.md  chunked-upload-interview-defense.md  final-resume-qa-scripts.md  final-resume-targeted-prep.md  interview-qa-scripts.md  interview-resume-why-design.md  pgvector-migration.md  postgresql-single-database-migration.md  promotion-video-xiaohongshu-guide.md  rag-chat-backend-plan.md  rag-retrieval-interview-defense.md  resume-and-interview-prep.md  resume-final-draft.md  resume-interview-defense-index.md  stress-test-guide.md  troubleshooting-and-interview-notes.md
tools/rag_eval/: README.md  __init__.py  prompt-manifest.json  pyproject.toml  ragas_runner.py
tools/rag_eval/fixtures/: cases.jsonl
tools/rag_eval/tests/: test_ragas_runner.py
web/: demo-features.html  index.html  package-lock.json  package.json  vite.config.js
(+505 files in other folders)
