[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "vidlens-rag-eval"
version = "0.1.0"
description = "Offline Ragas adapter for VidLens evaluation artifacts"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ragas = [
  "ragas==0.4.3",
  "langchain-openai>=0.3,<2",
]
test = ["pytest>=8,<9"]

[tool.setuptools]
py-modules = ["ragas_runner"]
